navbar responsive issue on mobile is fixed

--- a/src/App.css
+++ b/src/App.css
@@ -434,6 +434,13 @@ body {
   filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.4));
 }
 
+#Intro{
+  user-select: none;
+}
+
+#About{
+  user-select: none;
+}
 #About::before {
 
   content: '';
